--- a/TODO.txt
+++ b/TODO.txt
@@ -20,9 +20,7 @@ Notes from Lauire, prior to today's work:
 
 * "Pull quote font size compared to size of font for regular text and headings" I assume she means she thinks it's too big. I like it, but I’m sure it could be somewhat smaller too. 
 
-* "I would not reduce the [body] text font size.” I agree. 
-
-* "Links seem to show up well against a background color as opposed to the white—but white may be better for other reasons." She suggests that more saturated link colors would be better.
+* "Links seem to show up well against a background color as opposed to the white." She suggests that more saturated link colors would be better.
 
 * "The current Title “Arsenic and You” font size is too small compared to the first Header on the page (Welcome to Arsenic and You ." I suggested that the Title might be the right size, because visitors come for the information -- the title is for credibility and orientation, not promotion. 
 
